@@ -1,0 +1,4 @@
+# -*- makefile -*- Time-stamp: <04/01/12 15:37:40 ptr>
+
+PRGNAME = test
+SRC_CC = test.cc
